[package]
name = "dylan"
authors = ["Joel Montes de Oca"]
version = "0.1.0"
edition = "2021"

[lib]
name = "dylan"
path = "src/lib.rs"
doctest = true
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.31"
egui = "0.18.1"
eframe = "0.18.0"
rfd = "0.9.1"
egui_extras = "0.18.0"
